--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,11 @@ platform = atmelavr
 board = pro16MHzatmega328
 framework = arduino
 
+upload_port = COM3
+
+monitor_port = COM3
 monitor_speed = 115200
 
 build_flags = 
     -Wl,-T./linker-script-avr5.xn
+
