--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,48 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pro16MHzatmega328]
+[platformio]
+default_envs = CoopMultithreadingDemo
+
+src_dir = src
+include_dir = src
+
+#_____________________________________________________________________________#
+
+[env]
 platform = atmelavr
 board = pro16MHzatmega328
 framework = arduino
+
+src_filter =
+    +<avrtos/>
+
+build_flags = 
+    -Wl,-T./linker-script-avr5.xn
 
 upload_port = COM3
 
 monitor_port = COM3
 monitor_speed = 115200
 
-build_flags = 
-    -Wl,-T./linker-script-avr5.xn
+#_____________________________________________________________________________#
 
+[env:CoopMultithreadingDemo]
+src_filter =
+    ${env.src_filter}
+    +<examples/coop-multithreading-demo/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_MAX=4
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
+
+#_____________________________________________________________________________#
+
+[env:MultithreadingSwitchingFrequencyDemo]
+src_filter =
+    ${env.src_filter}
+    +<examples/multithreading-switching-frequency/>
+
+build_flags = 
+    ${env.build_flags}
