scheduler first implementation, added draft for k_sleep

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,3 +53,13 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+
+#_____________________________________________________________________________#
+
+[env:SchedulerDev]
+src_filter =
+    ${env.src_filter}
+    +<examples/scheduler-dev/>
+
+build_flags = 
+    ${env.build_flags}
