--- a/platformio.ini
+++ b/platformio.ini
@@ -63,3 +63,13 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+
+#_____________________________________________________________________________#
+
+[env:InterruptYield]
+src_filter =
+    ${env.src_filter}
+    +<examples/interrupt-yield/>
+
+build_flags = 
+    ${env.build_flags}
