--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@ build_flags =
 upload_port = COM3
 
 monitor_port = COM3
-monitor_speed = 115200
+monitor_speed = 1000000
 
 #_____________________________________________________________________________#
 
