auto enable interrupts in additionnal threads + added configuration option, added disassembly script + fixed uart interrupt handler (r25 register no saved by the caller)

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@ build_flags =
 upload_port = COM3
 
 monitor_port = COM3
-monitor_speed = 1000000
+monitor_speed = 500000
 
 #_____________________________________________________________________________#
 
