finished debug function USART_DUMP_CORE

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,4 +74,6 @@ src_filter =
 build_flags = 
     ${env.build_flags}
 
-monitor_filters = log2file, default
+# https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
+# default
+monitor_filters = log2file, direct
