disable serial monitor logging

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,5 +75,5 @@ build_flags =
     ${env.build_flags}
 
 # https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
-# default
-monitor_filters = log2file, direct
+# default, log2file
+monitor_filters = direct  #, log2file
