renamed premptive example to premp-multithreading-demo

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,10 +66,10 @@ build_flags =
 
 #_____________________________________________________________________________#
 
-[env:InterruptYield]
+[env:PremptMultithreadingDemo]
 src_filter =
     ${env.src_filter}
-    +<examples/interrupt-yield/>
+    +<examples/prempt-multithreading-demo/>
 
 build_flags = 
     ${env.build_flags}
