added queue and dlist debug functions  + example, refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -77,3 +77,14 @@ build_flags =
 # https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
 # default, log2file
 monitor_filters = direct  #, log2file
+
+#_____________________________________________________________________________#
+
+[env:DataStructures]
+src_filter =
+    ${env.src_filter}
+    +<examples/data-structures/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
