WIP added dlist manipulation functions, use 1024/256 prescaler in function of time_slice, documentation

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
 
 #_____________________________________________________________________________#
 
