--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,11 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
+
 
 # https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
 # default, log2file
