updated coop example, config and script

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_MAX=4
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
 
 #_____________________________________________________________________________#
 
