--- a/platformio.ini
+++ b/platformio.ini
@@ -54,6 +54,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
     
 #_____________________________________________________________________________#
 
