added support for mutexes : kernel, linker-script, example, added tqueue_remove function

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,3 +85,17 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
+
+#_____________________________________________________________________________#
+
+[env:MutexMultithreadingDemo]
+src_filter =
+    ${env.src_filter}
+    +<examples/mutex-multithreading-demo/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=0
