--- a/platformio.ini
+++ b/platformio.ini
@@ -100,3 +100,17 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     
+#_____________________________________________________________________________#
+
+[env:KernelTest]
+src_filter =
+    ${env.src_filter}
+    +<examples/kernel-test/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    
