added support for thread canaries

--- a/platformio.ini
+++ b/platformio.ini
@@ -102,6 +102,17 @@ build_flags =
     
 #_____________________________________________________________________________#
 
+[env:Canaries]
+src_filter =
+    ${env.src_filter}
+    +<examples/canaries/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_CANARIES=1
+
+#_____________________________________________________________________________#
+
 [env:KernelTest]
 src_filter =
     ${env.src_filter}
