--- a/platformio.ini
+++ b/platformio.ini
@@ -110,6 +110,19 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_THREAD_CANARIES=1
+#_____________________________________________________________________________#
+
+[env:InterruptYield]
+src_filter =
+    ${env.src_filter}
+    +<examples/interrupt-yield/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 #_____________________________________________________________________________#
 
