--- a/platformio.ini
+++ b/platformio.ini
@@ -113,6 +113,20 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:SchedLock]
+src_filter =
+    ${env.src_filter}
+    +<examples/sched-lock/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=5
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
 [env:KernelTest]
 src_filter =
     ${env.src_filter}
