added avr6 linker-script and ATmega2560 configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,18 +18,20 @@ include_dir = src
 
 [env]
 platform = atmelavr
-board = pro16MHzatmega328
+; board = pro16MHzatmega328
+board = megaatmega2560
 framework = arduino
 
 src_filter =
     +<avrtos/>
 
 build_flags = 
-    -Wl,-T./linker-script-avr5.xn
+    ; -Wl,-T./avrtos-avr5.xn
+    -Wl,-T./avrtos-avr6.xn
 
-upload_port = COM3
+upload_port = COM5
 
-monitor_port = COM3
+monitor_port = COM5
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
