added KERNEL_ALLOW_INTERRUPT_YIELD configuration option, change the stack size of the idle thread when allowing to thread switch in interrupt handlers

--- a/platformio.ini
+++ b/platformio.ini
@@ -125,6 +125,7 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=16
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ALLOW_INTERRUPT_YIELD=1
 
 #_____________________________________________________________________________#
 
