--- a/platformio.ini
+++ b/platformio.ini
@@ -112,6 +112,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 #_____________________________________________________________________________#
 
 [env:InterruptYield]
@@ -126,6 +127,7 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ALLOW_INTERRUPT_YIELD=1
+    -DCONFIG_THREAD_CANARIES=1
 
 #_____________________________________________________________________________#
 
