documented readme, added minimal-example, added 'c' log when canceling coop thread preemption, added led_set function

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,8 +69,9 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
     -DCONFIG_KERNEL_TIME_SLICE=10
-    -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=0
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
 
 
 # https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
@@ -145,3 +146,16 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:MinimalExample]
+src_filter =
+    ${env.src_filter}
+    +<examples/minimal-example/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
+    
+#_____________________________________________________________________________#
