first implementation of workqueues added configuration for a system workqueue, added two examples

--- a/platformio.ini
+++ b/platformio.ini
@@ -146,6 +146,33 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:WorkQueue]
+src_filter =
+    ${env.src_filter}
+    +<examples/workqueue/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:SystemWorkQueue]
+src_filter =
+    ${env.src_filter}
+    +<examples/system-workqueue/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+
+#_____________________________________________________________________________#
+
 [env:MinimalExample]
 src_filter =
     ${env.src_filter}
