fully implemented semaphore, removed internal _k_yield function, keep k_yield only, added SemaphoreMultithreadingDemo example

--- a/platformio.ini
+++ b/platformio.ini
@@ -105,6 +105,20 @@ build_flags =
     
 #_____________________________________________________________________________#
 
+[env:SemaphoreMultithreadingDemo]
+src_filter =
+    ${env.src_filter}
+    +<examples/semaphore-multithreading-demo/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
 [env:Canaries]
 src_filter =
     ${env.src_filter}
