--- a/platformio.ini
+++ b/platformio.ini
@@ -101,7 +101,21 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=16
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    
+
+#_____________________________________________________________________________#
+
+[env:MutexMultithreadingTest]
+src_filter =
+    ${env.src_filter}
+    +<examples/mutex-multithreading-test/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
 #_____________________________________________________________________________#
 
 [env:SemaphoreMultithreadingDemo]
