optimized scheduler functions, changed the naming of kernel functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ include_dir = src
 [env]
 platform = atmelavr
 board = pro16MHzatmega328
-; board = megaatmega2560
+; board = megaatmega2560, pro16MHzatmega328
 
 src_filter =
     +<avrtos/>
@@ -68,7 +68,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
     -DCONFIG_KERNEL_TIME_SLICE=10
-    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=0
+    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -156,6 +156,7 @@ build_flags =
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ALLOW_INTERRUPT_YIELD=1
     -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_API_NOINLINE=0
 
 #_____________________________________________________________________________#
 
@@ -168,7 +169,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
     -DCONFIG_KERNEL_TIME_SLICE=5
-    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 #_____________________________________________________________________________#
