--- a/platformio.ini
+++ b/platformio.ini
@@ -101,6 +101,22 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=16
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_THREAD_IDLE=1
+#_____________________________________________________________________________#
+
+[env:MutexMultithreadingDemoAssert]
+src_filter =
+    ${env.src_filter}
+    +<examples/mutex-multithreading-demo/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_THREAD_IDLE=0
+    -DCONFIG_KERNEL_ASSERT=1
 
 #_____________________________________________________________________________#
 
