added support for timers 1 and 2, time slice up to 4 seconds with timer 1, added configuration option DEFAULT_KERNEL_SYSLOCK_HW_TIMER + preprocessor generation script

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ include_dir = src
 
 #_____________________________________________________________________________#
 
+# Global configuration for ATmega328p and Arduino Pro
+
 [env]
 platform = atmelavr
 board = pro16MHzatmega328
@@ -67,9 +69,9 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_TIME_SLICE=250
     -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
-    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 
@@ -217,6 +219,43 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:Sysclock]
+src_filter =
+    ${env.src_filter}
+    +<examples/sysclock/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_DEBUG=1
+    
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    
+#_____________________________________________________________________________#
+
+[env:Sysclock-ATmega2560]
+board = megaatmega2560
+
+upload_port = COM5
+monitor_port = COM5
+monitor_speed = 500000
+
+src_filter =
+    +<avrtos/>
+    +<examples/sysclock/>
+
+build_flags = 
+    -Wl,-T./avrtos-avr6.xn
+
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_DEBUG=1
+    
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    
+#_____________________________________________________________________________#
+
 [env:MinimalExample]
 src_filter =
     ${env.src_filter}
@@ -228,5 +267,3 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=10
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    
-#_____________________________________________________________________________#
