--- a/platformio.ini
+++ b/platformio.ini
@@ -189,6 +189,7 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=5
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_API_NOINLINE=1
 
 #_____________________________________________________________________________#
 
