--- a/platformio.ini
+++ b/platformio.ini
@@ -104,6 +104,32 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_THREAD_IDLE=1
+
+#_____________________________________________________________________________#
+
+[env:MutexMultithreadingDemo-qemu-ATmega328p]
+build_type = debug
+
+src_filter =
+    ${env.src_filter}
+    +<examples/mutex-multithreading-demo/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_THREAD_IDLE=1
+
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
+    
 #_____________________________________________________________________________#
 
 [env:MutexMultithreadingDemoAssert]
@@ -254,7 +280,59 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=1
     
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:Sysclock-qemu-ATmega2560]
+board = megaatmega2560
+
+src_filter =
+    ${env.src_filter}
+    +<examples/sysclock/>
+
+build_flags = 
+    -Wl,-T./avrtos-avr6.xn
+
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_DEBUG=1
     
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+; build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
+
+#_____________________________________________________________________________#
+
+[env:Sysclock-qemu-ATmega328p]
+board = pro16MHzatmega328
+
+src_filter =
+    ${env.src_filter}
+    +<examples/sysclock/>
+
+build_flags = 
+    -Wl,-T./avrtos-avr5.xn
+
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_DEBUG=1
+    
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+; build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
+
 #_____________________________________________________________________________#
 
 [env:MinimalExample]
