--- a/platformio.ini
+++ b/platformio.ini
@@ -346,3 +346,29 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=10
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:Fifo]
+src_filter =
+    ${env.src_filter}
+    +<examples/fifo/>
+
+#_____________________________________________________________________________#
+
+[env:FifoQemuMega328p]
+board = pro16MHzatmega328
+
+src_filter =
+    ${env:Fifo.src_filter}
+    
+build_flags = 
+    -Wl,-T./avrtos-avr5.xn
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
