implemented memory slabs
- example fifo/mem_slab
- renamed pending functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "queue.h": "c",
         "workqueue.h": "c",
         "dlist.h": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "mem_slab.h": "c"
     }
 }
