--- a/platformio.ini
+++ b/platformio.ini
@@ -372,3 +372,17 @@ debug_load_mode = manual
 monitor_port = socket://localhost:5678
 debug_extra_cmds =
     tbreak main
+
+#_____________________________________________________________________________#
+
+[env:FifoSlab]
+src_filter =
+    ${env.src_filter}
+    +<examples/fifo-slab/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
