--- a/platformio.ini
+++ b/platformio.ini
@@ -386,3 +386,4 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=4
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ASSERT=0
