--- a/platformio.ini
+++ b/platformio.ini
@@ -387,3 +387,15 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=0
+
+#_____________________________________________________________________________#
+
+[env:Signal]
+src_filter =
+    ${env.src_filter}
+    +<examples/signal/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
