--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
         "workqueue.h": "c",
         "dlist.h": "c",
         "stddef.h": "c",
-        "mem_slab.h": "c"
+        "mem_slab.h": "c",
+        "avrtos.h": "c",
+        "tqueue.h": "c"
     }
 }
