removed "immediate" wake up concept
immediate concept is no more needed because of the
swap_data thread member (passing an object directly to
the first waiting thread)

added object reservation example

reordered thread first execution

--- a/platformio.ini
+++ b/platformio.ini
@@ -388,3 +388,18 @@ build_flags =
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=0
 
+#_____________________________________________________________________________#
+
+[env:ObjectReservation]
+src_filter =
+    ${env.src_filter}
+    +<examples/object-reservation/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
+    -DCONFIG_KERNEL_ASSERT=1
+
