--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,7 @@ build_flags =
     -DCONFIG_THREAD_MAX=4
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
+    -DCONFIG_THREAD_USE_INIT_STACK_ASM=0
 
 #_____________________________________________________________________________#
 
@@ -403,3 +404,42 @@ build_flags =
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
     -DCONFIG_KERNEL_ASSERT=1
 
+#_____________________________________________________________________________#
+
+[env:ThreadTermination]
+src_filter =
+    ${env.src_filter}
+    +<examples/thread-termination/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_YIELD_ON_UNPEND=0
+    -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
+
+#_____________________________________________________________________________#
+
+[env:ThreadTermination-qemu-ATmega2560]
+board = megaatmega2560
+
+src_filter =
+    ${env.src_filter}
+    +<examples/thread-termination/>
+
+build_flags = 
+    -Wl,-T./avrtos-avr6.xn
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_YIELD_ON_UNPEND=0
+    -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
+
+; build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
