implemented optimized queue for constant time actions (queue/dequeue)
- added complexity information for data structures
- changed queue data strcuture from queue to oqueue in fifo
- added example for oqueue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "stddef.h": "c",
         "mem_slab.h": "c",
         "avrtos.h": "c",
-        "tqueue.h": "c"
+        "tqueue.h": "c",
+        "oqueue.h": "c"
     }
 }
