--- a/platformio.ini
+++ b/platformio.ini
@@ -422,6 +422,21 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:Timer]
+src_filter =
+    ${env.src_filter}
+    +<examples/timers/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+    
+#_____________________________________________________________________________#
+
 [env:ThreadTermination-qemu-ATmega2560]
 board = megaatmega2560
 
