Fixed type warning in C++ and added C++ example

--- a/platformio.ini
+++ b/platformio.ini
@@ -460,3 +460,13 @@ debug_load_mode = manual
 monitor_port = socket://localhost:5678
 debug_extra_cmds =
     tbreak main
+
+#_____________________________________________________________________________#
+
+[env:CPP]
+src_filter =
+    ${env.src_filter}
+    +<examples/cpp/>
+
+build_flags = 
+    ${env.build_flags}
