--- a/platformio.ini
+++ b/platformio.ini
@@ -470,3 +470,9 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=50
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
