--- a/platformio.ini
+++ b/platformio.ini
@@ -486,5 +486,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    ; -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
