--- a/platformio.ini
+++ b/platformio.ini
@@ -490,3 +490,10 @@ build_flags =
     ; -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:PRNG]
+src_filter =
+    ${env.src_filter}
+    +<examples/prng/>
