--- a/platformio.ini
+++ b/platformio.ini
@@ -244,6 +244,7 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+    -DCONFIG_KERNEL_API_NOINLINE=0
 
 #_____________________________________________________________________________#
 
