Added two examples, added K_MODULE_APPLICATION for assert
- mem_slab
- poc-shell

--- a/platformio.ini
+++ b/platformio.ini
@@ -493,6 +493,38 @@ build_flags =
 
 #_____________________________________________________________________________#
 
+[env:MemSlab]
+src_filter =
+    ${env.src_filter}
+    +<examples/mem_slab/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    ; -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x64
+
+#_____________________________________________________________________________#
+
+[env:POC-Shell]
+src_filter =
+    ${env.src_filter}
+    +<examples/poc-shell/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
+    ; -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ASSERT=1
+
+#_____________________________________________________________________________#
+
 [env:PRNG]
 src_filter =
     ${env.src_filter}
