--- a/platformio.ini
+++ b/platformio.ini
@@ -30,9 +30,9 @@ build_flags =
     -Wl,-T./avrtos-avr5.xn
     ; -Wl,-T./avrtos-avr6.xn
 
-upload_port = COM4
+upload_port = /dev/ttyACM0
 
-monitor_port = COM4
+monitor_port = /dev/ttyACM0
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
@@ -265,10 +265,6 @@ build_flags =
 
 [env:Sysclock-ATmega2560]
 board = megaatmega2560
-
-upload_port = COM9
-monitor_port = COM9
-monitor_speed = 500000
 
 src_filter =
     +<avrtos/>
