Added support for Messages Queues
- Removed incompatble configuration option DEFAULT_KERNEL_YIELD_ON_UNPEND
- Added a MSGQ example
- Make _k_unpend_first_thread() returned the thread address
- Don't set swap_data if _k_unpend_first_thread() set_swap_data argument is NULL
- Minor : Added ENOMSG, changed .editorconfig coding styles rules

--- a/platformio.ini
+++ b/platformio.ini
@@ -529,3 +529,19 @@ build_flags =
 src_filter =
     ${env.src_filter}
     +<examples/prng/>
+
+#_____________________________________________________________________________#
+
+[env:MsgQ]
+src_filter =
+    ${env.src_filter}
+    +<examples/msgq/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x64
