--- a/platformio.ini
+++ b/platformio.ini
@@ -30,9 +30,11 @@ build_flags =
     -Wl,-T./avrtos-avr5.xn
     ; -Wl,-T./avrtos-avr6.xn
 
-upload_port = /dev/ttyACM0
+; /dev/ttyACM0
+upload_port = COM4
 
-monitor_port = /dev/ttyACM0
+; /dev/ttyACM0
+monitor_port = COM4
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
