Add support for 8 bit atomic operations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,9 @@
         "tqueue.h": "c",
         "oqueue.h": "c",
         "led.h": "c",
-        "delay.h": "c"
+        "delay.h": "c",
+        "cpufunc.h": "c",
+        "stdint.h": "c",
+        "default_config.h": "c"
     }
 }
