--- a/platformio.ini
+++ b/platformio.ini
@@ -541,3 +541,15 @@ build_flags =
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x64
+
+#_____________________________________________________________________________#
+
+[env:Atomic]
+src_filter =
+    ${env.src_filter}
+    +<examples/atomic/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_ALLOW_RETURN=1
+    -DCONFIG_KERNEL_ASSERT=1
