First implementation for a drivers for USART peripheral
- Add example

--- a/platformio.ini
+++ b/platformio.ini
@@ -553,3 +553,17 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_ALLOW_RETURN=1
     -DCONFIG_KERNEL_ASSERT=1
+
+#_____________________________________________________________________________#
+
+[env:DriversUSART]
+src_filter =
+    ${env.src_filter}
+    +<examples/drv-usart/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x400
+    -DCONFIG_KERNEL_API_NOINLINE=1
