--- a/platformio.ini
+++ b/platformio.ini
@@ -20,21 +20,21 @@ include_dir = src
 
 [env]
 platform = atmelavr
-board = pro16MHzatmega328
+board = megaatmega2560
 ; board = megaatmega2560, pro16MHzatmega328
 
 src_filter =
     +<avrtos/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr5.xn
-    ; -Wl,-T./avrtos-avr6.xn
+;     -Wl,-T./avrtos-avr5.xn
+        -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = COM4
+upload_port = COM3
 
 ; /dev/ttyACM0
-monitor_port = COM4
+monitor_port = COM3
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
