Refactor thread IDLE handling, add support for stdio
- add support for stdio
- add option STDIO_PRINTF_TO_USART
- add example for IDLE and STDIO

--- a/platformio.ini
+++ b/platformio.ini
@@ -553,3 +553,16 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_ALLOW_RETURN=1
     -DCONFIG_KERNEL_ASSERT=1
+
+#_____________________________________________________________________________#
+
+[env:IDLE]
+src_filter =
+    ${env.src_filter}
+    +<examples/idle/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_THREAD_IDLE=0
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
