Add support for uptime
- Add option KERNEL_UPTIME to enable the feature
- Add option KERNEL_UPTIME_40BITS to extend maximum uptime from ~49days to ~37years.
- Add option KERNEL_MAX_SYSCLOCK_PERIOD_MS to allow high uptime counter precision
- Add related example

--- a/.vscode/launch.template.json
+++ b/.vscode/launch.template.json
@@ -42,6 +42,27 @@
                     "ignoreFailures": true
                 }
             ]
-        }
+        },
+        {
+		"name": "(gdb) remote QEMU VMDEV",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/.pio/build/Uptime-qemu-ATmega328p/firmware.elf",
+		"args": [],
+		"stopAtEntry": true,
+		"cwd": "${workspaceFolder}",
+		"environment": [],
+		"externalConsole": true,
+		"MIMode": "gdb",
+		"miDebuggerPath": "/usr/bin/avr-gdb",
+		"miDebuggerServerAddress": "localhost:1234",
+		"setupCommands": [
+		    {
+			"description": "Enable pretty-printing for gdb",
+			"text": "-enable-pretty-printing",
+			"ignoreFailures": true
+		    }
+		]
+	}
     ]
 }
