--- a/platformio.ini
+++ b/platformio.ini
@@ -566,3 +566,53 @@ build_flags =
     -DCONFIG_KERNEL_THREAD_IDLE=0
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
+
+#_____________________________________________________________________________#
+
+[env:Uptime]
+src_filter =
+    ${env.src_filter}
+    +<examples/uptime/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=0
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
+    -DCONFIG_KERNEL_UPTIME_40BITS=0
+    -DCONFIG_KERNEL_API_NOINLINE=1
+    -DCONFIG_THREAD_CANARIES=1
+
+#_____________________________________________________________________________#
+
+[env:Uptime-qemu-ATmega2560]
+board = megaatmega2560
+
+src_filter =
+    ${env.src_filter}
+    +<examples/uptime/>
+
+build_flags = 
+    -Wl,-T./avrtos-avr6.xn
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
+    -DCONFIG_KERNEL_UPTIME_40BITS=0
+    -DCONFIG_KERNEL_API_NOINLINE=1
+    -DCONFIG_THREAD_CANARIES=1
+
+build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
