--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,5 +41,13 @@
 			],
 			"label": "QEMU WSL Ubuntu - ThreadTermination-qemu-ATmega2560"
 		},
+		{
+			"type": "shell",
+			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M mega2560 -bios .pio/build/Uptime-qemu-ATmega2560/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
+			"problemMatcher": [
+				"$platformio"
+			],
+			"label": "QEMU VMDEV Ubuntu - Uptime-qemu-ATmega2560"
+		},
 	]
 }
