Add  example to prove minimum AVRTOS footprint

--- a/platformio.ini
+++ b/platformio.ini
@@ -616,3 +616,20 @@ debug_load_mode = manual
 monitor_port = socket://localhost:5678
 debug_extra_cmds =
     tbreak main
+
+#_____________________________________________________________________________#
+
+[env:Footprint]
+src_filter =
+    ${env.src_filter}
+    +<examples/footprint/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=0
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_THREAD_IDLE=0
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x20
+    -DCONFIG_STDIO_PRINTF_TO_USART=-1
+    -DCONFIG_KERNEL_UPTIME=1
