Add support for events
- Add thread flag "wakeup_schd"
- Add events example
- Don't automatically start thread after call of k_thread_create()
- Remove unused (misnamed) funciton _k_unschedule()
- Add function k_idle() to make a normal thread behaving like an IDLE thread temporarily
- Add CONFIG_KERNEL_EVENTS configuration option (disabled by default)
- Disable timers by default (DEFAULT_KERNEL_TIMERS=0)
- Add macro K_TIMEOUT_MS to get k_timeout_t value

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,9 @@
         "cpufunc.h": "c",
         "stdint.h": "c",
         "default_config.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "event.h": "c",
+        "atomic.h": "c",
+        "timer.h": "c"
     }
 }
