--- a/platformio.ini
+++ b/platformio.ini
@@ -633,3 +633,25 @@ build_flags =
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x20
     -DCONFIG_STDIO_PRINTF_TO_USART=-1
     -DCONFIG_KERNEL_UPTIME=1
+
+#_____________________________________________________________________________#
+
+[env:Events]
+src_filter =
+    ${env.src_filter}
+    +<examples/events/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_THREAD_IDLE=0
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x50
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_TIMERS=0
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_EVENTS=1
+
+    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_ASSERT=0
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
