Add support for stack sentinel and general fault handling
- Add configuration option THREAD_STACK_SENTINEL, THREAD_STACK_SENTINEL_SIZE and THREAD_STACK_SENTINEL_SYMBOL
- Adjust canaries in function of sentinel
- Remove macros for K_THREAD_MINSTACK_DEFINE and _K_STACK_MIN_INITIALIZER
- Renamed stack related functions
- Validate stack sentinel in before scheduling a thread using "_k_schedule()"
- Moved k_set_stdio_usart0() to _k_avrtos_init()

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "time.h": "c",
         "event.h": "c",
         "atomic.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "stack_sentinel.h": "c",
+        "fault.h": "c"
     }
 }
