--- a/platformio.ini
+++ b/platformio.ini
@@ -655,3 +655,29 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:Stack-sentinel]
+src_filter =
+    ${env.src_filter}
+    +<examples/stack-sentinel/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_THREAD_IDLE=1
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x50
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_TIMERS=0
+    -DCONFIG_KERNEL_UPTIME=0
+    -DCONFIG_KERNEL_EVENTS=0
+
+    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_ASSERT=0
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_THREAD_STACK_SENTINEL=1
+    -DCONFIG_THREAD_STACK_SENTINEL_SIZE=2
+    -DCONFIG_THREAD_STACK_SENTINEL_SYMBOL=0xFF
+    -DCONFIG_THREAD_CANARIES=1
