--- a/platformio.ini
+++ b/platformio.ini
@@ -655,6 +655,7 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_THREAD_STACK_SENTINEL=1
 
 #_____________________________________________________________________________#
 
