--- a/platformio.ini
+++ b/platformio.ini
@@ -656,7 +656,8 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_THREAD_STACK_SENTINEL=1
-
+    -DCONFIG_KERNEL_API_NOINLINE=1
+    
 #_____________________________________________________________________________#
 
 [env:Stack-sentinel]
