Adjust configuration in examples
- Add test for  SYSCLOCK_PERIOD_MS when KERNEL_UPTIME is enabled

--- a/platformio.ini
+++ b/platformio.ini
@@ -259,6 +259,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -277,6 +278,7 @@ build_flags =
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -295,6 +297,7 @@ build_flags =
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -321,6 +324,7 @@ build_flags =
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -399,6 +403,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
     -DCONFIG_KERNEL_ASSERT=1
@@ -430,6 +435,7 @@ build_flags =
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_TIMERS=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
     
 #_____________________________________________________________________________#
@@ -502,6 +508,7 @@ build_flags =
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x64
+;     -DCONFIG_THREAD_STACK_SENTINEL=1
 
 #_____________________________________________________________________________#
 
