--- a/platformio.ini
+++ b/platformio.ini
@@ -421,23 +421,8 @@ build_flags =
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
     -DCONFIG_THREAD_ALLOW_RETURN=1
+    -DCONFIG_KERNEL_UPTIME=0
 
-#_____________________________________________________________________________#
-
-[env:Timer]
-src_filter =
-    ${env.src_filter}
-    +<examples/timers/>
-
-build_flags = 
-    ${env.build_flags}
-    -DCONFIG_KERNEL_ASSERT=1
-    -DCONFIG_THREAD_CANARIES=1
-    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=10
-    -DCONFIG_KERNEL_TIMERS=1
-    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
-    
 #_____________________________________________________________________________#
 
 [env:ThreadTermination-qemu-ATmega2560]
@@ -454,14 +439,32 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
+    -DCONFIG_THREAD_ALLOW_RETURN=1
+    -DCONFIG_KERNEL_UPTIME=0
 
-; build_type = debug
+build_type = debug
 debug_tool = custom
 debug_port = :1234
 debug_load_mode = manual
 monitor_port = socket://localhost:5678
 debug_extra_cmds =
     tbreak main
+
+#_____________________________________________________________________________#
+
+[env:Timer]
+src_filter =
+    ${env.src_filter}
+    +<examples/timers/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_TIMERS=1
+    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 
 #_____________________________________________________________________________#
 
