--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,14 @@
 		},
 		{
 			"type": "shell",
+			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M mega2560 -bios .pio/build/ThreadTermination-qemu-ATmega2560/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
+			"problemMatcher": [
+				"$platformio"
+			],
+			"label": "QEMU VMDEV Ubuntu - ThreadTermination-qemu-ATmega2560"
+		},
+		{
+			"type": "shell",
 			"command": "wsl ~/qemu/build/avr-softmmu/qemu-system-avr -M mega2560 -bios .pio/build/ThreadTermination-qemu-ATmega2560/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
 			"problemMatcher": [
 				"$platformio"
