--- a/platformio.ini
+++ b/platformio.ini
@@ -694,3 +694,24 @@ build_flags =
     -DCONFIG_THREAD_STACK_SENTINEL_SIZE=2
     -DCONFIG_THREAD_STACK_SENTINEL_SYMBOL=0xFF
     -DCONFIG_THREAD_CANARIES=1
+
+#_____________________________________________________________________________#
+
+[env:Time]
+src_filter =
+    ${env.src_filter}
+    +<examples/time/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
+    -DCONFIG_KERNEL_UPTIME_40BITS=1
+    -DCONFIG_KERNEL_API_NOINLINE=0
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_TIME=1
