(WIP AVRTOS2) Refactor and optimize sysclock, threads and scheduler
- Removed several configuration options
- Use of ticks instead of ms
- Highly configurable sysclock timer + precision mode
- Optimized stack usage for cooperative threads
- Allow how thread to return
- Add K_STATIC_ASSERT macro
- Add fault type : K_THREAD_TERMINATED
- Fix a bug where ready threads didn't get the READY flag scheduled

--- a/.editorconfig
+++ b/.editorconfig
@@ -61,3 +61,7 @@ cpp_space_around_ternary_operator=insert
 cpp_wrap_preserve_blocks=one_liners
 indent_size = 8
 indent_style = tab
+
+[*.py]
+indent_size = 4
+indent_style = space
