--- a/platformio.ini
+++ b/platformio.ini
@@ -31,10 +31,10 @@ build_flags =
     ; -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = COM4
+upload_port = /dev/ttyACM0
 
 ; /dev/ttyACM0
-monitor_port = COM4
+monitor_port = /dev/ttyACM0
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
@@ -49,7 +49,6 @@ build_flags =
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
     -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
-    -DCONFIG_THREAD_ALLOW_RETURN=0
 
 #_____________________________________________________________________________#
 
@@ -72,8 +71,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=250
-    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
+    -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -103,7 +101,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_THREAD_IDLE=1
@@ -120,7 +118,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=200
+    -DCONFIG_KERNEL_TIME_SLICE=200000
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
@@ -143,7 +141,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_THREAD_IDLE=0
@@ -159,7 +157,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -173,7 +171,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -198,7 +196,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16
+    -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ALLOW_INTERRUPT_YIELD=1
@@ -215,7 +213,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=5
+    -DCONFIG_KERNEL_TIME_SLICE=5000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_API_NOINLINE=1
@@ -229,7 +227,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -242,7 +240,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
@@ -258,7 +256,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
@@ -277,7 +275,7 @@ build_flags =
     -Wl,-T./avrtos-avr6.xn
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
@@ -296,7 +294,7 @@ build_flags =
     -Wl,-T./avrtos-avr6.xn
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
@@ -323,7 +321,7 @@ build_flags =
     -Wl,-T./avrtos-avr5.xn
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=250
+    -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     
@@ -347,7 +345,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_TIME_SLICE=10000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 
@@ -387,7 +385,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_TIME_SLICE=4000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=0
@@ -402,7 +400,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_TIME_SLICE=1000000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
@@ -420,7 +418,6 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
-    -DCONFIG_THREAD_ALLOW_RETURN=1
     -DCONFIG_KERNEL_UPTIME=0
 
 #_____________________________________________________________________________#
@@ -435,11 +432,10 @@ src_filter =
 build_flags = 
     -Wl,-T./avrtos-avr6.xn
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_TIME_SLICE=1000000
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
-    -DCONFIG_THREAD_ALLOW_RETURN=1
     -DCONFIG_KERNEL_UPTIME=0
 
 build_type = debug
@@ -462,7 +458,7 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=10
+    -DCONFIG_KERNEL_TIME_SLICE=10000
     -DCONFIG_KERNEL_TIMERS=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
 
@@ -477,7 +473,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=50
+    -DCONFIG_KERNEL_TIME_SLICE=50000
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=1
@@ -562,7 +558,6 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_THREAD_ALLOW_RETURN=1
     -DCONFIG_KERNEL_ASSERT=1
 
 #_____________________________________________________________________________#
@@ -591,10 +586,8 @@ build_flags =
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_TIME_SLICE=4000
     -DCONFIG_KERNEL_UPTIME=1
-    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
-    -DCONFIG_KERNEL_UPTIME_40BITS=1
     -DCONFIG_KERNEL_API_NOINLINE=1
     -DCONFIG_THREAD_CANARIES=1
 
@@ -613,10 +606,8 @@ build_flags =
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
     -DCONFIG_KERNEL_UPTIME=1
-    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
-    -DCONFIG_KERNEL_UPTIME_40BITS=0
     -DCONFIG_KERNEL_API_NOINLINE=1
     -DCONFIG_THREAD_CANARIES=1
 
@@ -662,7 +653,7 @@ build_flags =
     -DCONFIG_KERNEL_UPTIME=1
     -DCONFIG_KERNEL_EVENTS=1
 
-    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -686,7 +677,7 @@ build_flags =
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_EVENTS=0
 
-    -DCONFIG_KERNEL_TIME_SLICE=1
+    -DCONFIG_KERNEL_TIME_SLICE=1000
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
@@ -708,10 +699,83 @@ build_flags =
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=4
+    -DCONFIG_KERNEL_TIME_SLICE=4000
     -DCONFIG_KERNEL_UPTIME=1
-    -DCONFIG_KERNEL_MAX_SYSCLOCK_PERIOD_MS=1
-    -DCONFIG_KERNEL_UPTIME_40BITS=1
     -DCONFIG_KERNEL_API_NOINLINE=0
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_TIME=1
+
+#_____________________________________________________________________________#
+
+[env:V2]
+src_filter =
+    ${env.src_filter}
+    +<examples/v2/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+
+    -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_THREAD_STACK_SENTINEL=0
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_UPTIME=0
+    -DCONFIG_THREAD_CANARIES=0
+    -DCONFIG_KERNEL_SYSCLOCK_PRECISION_MODE=0
+    -DCONFIG_KERNEL_THREAD_MONITORING=0
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+
+    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+    -DCONFIG_KERNEL_TIME_SLICE=100000
+    -DCONFIG_KERNEL_THREAD_IDLE=1
+    -DCONFIG_KERNEL_API_NOINLINE=1
+	-D__QEMU__=1
+
+build_type = debug
+
+[env:V2-01]
+src_filter =
+	${env:V2.src_filter}
+
+build_flags = 
+	${env:V2.build_flags}
+	-O1
+
+[env:V2-01-DEBUG]
+build_type = debug
+
+src_filter =
+	${env:V2-01.src_filter}
+
+build_flags = 
+	${env:V2-01.build_flags}
+
+[env:V2-02]
+src_filter =
+	${env:V2.src_filter}
+
+build_flags = 
+	${env:V2.build_flags}
+	-O2
+	
+#_____________________________________________________________________________#
+
+[env:QEMU-V2]
+src_filter =
+	${env:V2.src_filter}
+
+build_flags = 
+	${env:V2.build_flags}
+	-D__QEMU__=1
+
+board = pro16MHzatmega328
+
+build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
