(WIP AVRTOS2) Add KERNEL_DEBUG_PREEMPT_UART configuration option + preemptive threads debug

--- a/platformio.ini
+++ b/platformio.ini
@@ -731,7 +731,10 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=100000
     -DCONFIG_KERNEL_THREAD_IDLE=1
     -DCONFIG_KERNEL_API_NOINLINE=1
-	-D__QEMU__=1
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
+    -DCONFIG_KERNEL_SYSCLOCK_AUTO_INIT=1
+    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
+    -D__QEMU__=1
 
 build_type = debug
 
