(WIP AVRTOS2) Rename runqueue and events_queue
- Remove KERNEL_ALLOW_INTERRUPT_YIELD
- Optimize default configuration
- Add compilation #error if sysclock period is not supported

--- a/platformio.ini
+++ b/platformio.ini
@@ -199,7 +199,6 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=16000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    -DCONFIG_KERNEL_ALLOW_INTERRUPT_YIELD=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_API_NOINLINE=0
 
@@ -716,25 +715,24 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_ASSERT=0
 
-    -DCONFIG_KERNEL_DEBUG=1
+;     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_THREAD_STACK_SENTINEL=0
     -DCONFIG_STDIO_PRINTF_TO_USART=0
-    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_THREAD_CANARIES=0
     -DCONFIG_KERNEL_SYSCLOCK_PRECISION_MODE=0
     -DCONFIG_KERNEL_THREAD_MONITORING=0
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 
-    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
-    -DCONFIG_KERNEL_TIME_SLICE=100000
+;     -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+;     -DCONFIG_KERNEL_TIME_SLICE=100000
+;     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_THREAD_IDLE=1
     -DCONFIG_KERNEL_API_NOINLINE=0
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
     -DCONFIG_KERNEL_SYSCLOCK_AUTO_INIT=1
     -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
-    -D__QEMU__=1
 
 build_type = debug
 
