--- a/platformio.ini
+++ b/platformio.ini
@@ -713,13 +713,14 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_KERNEL_ASSERT=0
+    -DCONFIG_KERNEL_ASSERT=1
 
-;     -DCONFIG_KERNEL_DEBUG=1
+    -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    -DCONFIG_THREAD_STACK_SENTINEL=0
+    -DCONFIG_THREAD_STACK_SENTINEL=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
-    -DCONFIG_KERNEL_UPTIME=0
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_TIME=1
     -DCONFIG_THREAD_CANARIES=0
     -DCONFIG_KERNEL_SYSCLOCK_PRECISION_MODE=0
     -DCONFIG_KERNEL_THREAD_MONITORING=0
