(WIP AVRTOS2) Fix runtime thread creation
- Remove stack initialization function written in assembler
- Removed THREAD_USE_INIT_STACK_ASM configuration option
- Create _K_STACK_MINIMAL_INITIALIZER and K_THREAD_MINIMAL_DEFINE macros
- Optimize IDLE thread size to minimum
- Add minimal support for 3 byte size PC architectures
- Create explicit context structures : _k_callsaved_ctx, _k_callused_ctx and _k_intctx

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -65,5 +65,14 @@
 			],
 			"label": "QEMU V2"
 		},
+		
+		{
+			"type": "shell",
+			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M uno -bios .pio/build/QEMU-CoopMultithreadingDemo/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
+			"problemMatcher": [
+				"$platformio"
+			],
+			"label": "QEMU-CoopMultithreadingDemo"
+		},
 	]
 }
