--- a/platformio.ini
+++ b/platformio.ini
@@ -48,7 +48,26 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=0
-    -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
+    -DCONFIG_THREAD_IDLE_COOPERATIVE=1
+
+#_____________________________________________________________________________#
+
+[env:QEMU-CoopMultithreadingDemo]
+
+src_filter =
+    ${env:CoopMultithreadingDemo.src_filter}
+
+build_flags = 
+    ${env:CoopMultithreadingDemo.build_flags}
+    -D__QEMU__=1
+
+build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
 
 #_____________________________________________________________________________#
 
@@ -416,7 +435,6 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
-    -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
     -DCONFIG_KERNEL_UPTIME=0
 
 #_____________________________________________________________________________#
@@ -434,7 +452,6 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=1000000
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
-    -DCONFIG_THREAD_USE_INIT_STACK_ASM=1
     -DCONFIG_KERNEL_UPTIME=0
 
 build_type = debug
