--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -65,7 +65,6 @@
 			],
 			"label": "QEMU V2"
 		},
-		
 		{
 			"type": "shell",
 			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M uno -bios .pio/build/QEMU-CoopMultithreadingDemo/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
@@ -73,6 +72,14 @@
 				"$platformio"
 			],
 			"label": "QEMU-CoopMultithreadingDemo"
+		},
+		{
+			"type": "shell",
+			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M uno -bios .pio/build/QEMU-StackSentinel/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
+			"problemMatcher": [
+				"$platformio"
+			],
+			"label": "QEMU-StackSentinel"
 		},
 	]
 }
