--- a/platformio.ini
+++ b/platformio.ini
@@ -93,6 +93,7 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_DEBUG=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=1
 
 
 # https://docs.platformio.org/en/latest/core/userguide/device/cmd_monitor.html#filters
@@ -120,7 +121,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_TIME_SLICE=16000
+    -DCONFIG_KERNEL_TIME_SLICE=4000
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_THREAD_IDLE=1
@@ -418,6 +419,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000000
     -DCONFIG_KERNEL_TIME_SLICE=1000000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
@@ -503,10 +505,9 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
     ; -DCONFIG_THREAD_CANARIES=1
-    -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_DEBUG=0
 
 #_____________________________________________________________________________#
 
@@ -518,13 +519,14 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-    -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x80
     -DCONFIG_THREAD_STACK_SENTINEL=1
+    -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_UPTIME=1
 
 #_____________________________________________________________________________#
 
@@ -575,6 +577,7 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_KERNEL_ATOMIC_API=1
 
 #_____________________________________________________________________________#
 
@@ -678,7 +681,7 @@ build_flags =
     
 #_____________________________________________________________________________#
 
-[env:Stack-sentinel]
+[env:StackSentinel]
 src_filter =
     ${env.src_filter}
     +<examples/stack-sentinel/>
@@ -686,22 +689,48 @@ src_filter =
 build_flags = 
     ${env.build_flags}
     -DCONFIG_KERNEL_THREAD_IDLE=1
+    -DCONFIG_THREAD_IDLE_COOPERATIVE=1
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x50
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
+    -DCONFIG_THREAD_MAIN_COOPERATIVE=0
+    -DCONFIG_KERNEL_SYSCLOCK_AUTO_START=1
+
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_TIMERS=0
-    -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_EVENTS=0
 
-    -DCONFIG_KERNEL_TIME_SLICE=1000
+    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=500
+    -DCONFIG_KERNEL_TIME_SLICE=500
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    -DCONFIG_THREAD_STACK_SENTINEL=1
-    -DCONFIG_THREAD_STACK_SENTINEL_SIZE=2
+    -DCONFIG_THREAD_STACK_SENTINEL=0
+    -DCONFIG_THREAD_STACK_SENTINEL_SIZE=1
     -DCONFIG_THREAD_STACK_SENTINEL_SYMBOL=0xFF
     -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x100
+    -DCONFIG_THREAD_INTERRUPT_MODE=2
+    -DCONFIG_KERNEL_UPTIME=1
 
+#_____________________________________________________________________________#
+
+[env:QEMU-StackSentinel]
+src_filter =
+	${env:StackSentinel.src_filter}
+
+build_flags = 
+	${env:StackSentinel.build_flags}
+	-D__QEMU__=1
+
+build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
+    
 #_____________________________________________________________________________#
 
 [env:Time]
@@ -741,15 +770,15 @@ build_flags =
     -DCONFIG_THREAD_CANARIES=0
     -DCONFIG_KERNEL_SYSCLOCK_PRECISION_MODE=0
     -DCONFIG_KERNEL_THREAD_MONITORING=0
-    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 
-;     -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
-;     -DCONFIG_KERNEL_TIME_SLICE=100000
-;     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+    -DCONFIG_KERNEL_TIME_SLICE=100000
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+
     -DCONFIG_KERNEL_THREAD_IDLE=1
     -DCONFIG_KERNEL_API_NOINLINE=0
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_SYSCLOCK_AUTO_INIT=1
+    -DCONFIG_KERNEL_SYSCLOCK_AUTO_START=1
     -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=0
 
 build_type = debug
